--- a/profile.html
+++ b/profile.html
@@ -1,32 +1,4 @@
-const colors = {
-  green: {
-    wrapperBackground: "#E6E1C3",
-    headerBackground: "#C1C72C",
-    headerColor: "black",
-    photoBorderColor: "black"
-  },
-  blue: {
-    wrapperBackground: "#5F64D3",
-    headerBackground: "#26175A",
-    headerColor: "white",
-    photoBorderColor: "#73448C"
-  },
-  pink: {
-    wrapperBackground: "#879CDF",
-    headerBackground: "#FF8374",
-    headerColor: "white",
-    photoBorderColor: "#FEE24C"
-  },
-  red: {
-    wrapperBackground: "#DE9967",
-    headerBackground: "#870603",
-    headerColor: "white",
-    photoBorderColor: "white"
-  }
-};
-
-function generateHTML(data) {
-  return `<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
    <head>
       <meta charset="UTF-8" />
@@ -53,7 +25,7 @@ function generateHTML(data) {
          height: 100%;
          }
          .wrapper {
-         background-color: ${colors[data.color].wrapperBackground};
+         background-color: #5F64D3;
          padding-top: 100px;
          }
          body {
@@ -96,8 +68,8 @@ function generateHTML(data) {
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
-         background-color: ${colors[data.color].headerBackground};
-         color: ${colors[data.color].headerColor};
+         background-color: #26175A;
+         color: white;
          padding: 10px;
          width: 95%;
          border-radius: 6px;
@@ -108,7 +80,7 @@ function generateHTML(data) {
          border-radius: 50%;
          object-fit: cover;
          margin-top: -75px;
-         border: 6px solid ${colors[data.color].photoBorderColor};
+         border: 6px solid #73448C;
          box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
          }
          .photo-header h1, .photo-header h2 {
@@ -151,8 +123,8 @@ function generateHTML(data) {
          .card {
            padding: 20px;
            border-radius: 6px;
-           background-color: ${colors[data.color].headerBackground};
-           color: ${colors[data.color].headerColor};
+           background-color: #26175A;
+           color: white;
            margin: 20px;
            display: inline-block;
          }
@@ -177,27 +149,27 @@ function generateHTML(data) {
       <body>
          <div class="wrapper">
          <div class="photo-header">
-         <img src=${data.avatar_url}>
+         <img src=https://avatars2.githubusercontent.com/u/51337180?v=4>
          <h1>Hi!</h1>
-         <h2>My name is ${data.name}</h2>
+         <h2>My name is Kamshat Mussina</h2>
          <div class="links-nav">
          <h4 class="nav-link">
-         <i class="fas fa-map-marker-alt"> ${data.location}</i>
-         <a href="${data.html_url}"> <i class="fab fa-github"> Github</i></a>
-         <a href="${data.blog}"><i class="fas fa-rss"> Blog</i></a>
+         <i class="fas fa-map-marker-alt"> Broomfield, Colorado</i>
+         <a href="https://github.com/MussinaKama"> <i class="fab fa-github"> Github</i></a>
+         <a href="https://mussinakama.github.io/Portfolio/"><i class="fas fa-rss"> Blog</i></a>
          </h4>
          </div>
          </div>
          <main>
          <div class="container">
-         <h3>${data.bio}</h3>
+         <h3>Full-stack developer</h3>
          <div class="row">
          <div class="col">
          <div class="card">
-         <h2>Public Repositories ${data.public_repos}</h2>
+         <h2>Public Repositories 15</h2>
          </div>
          <div class="card">
-         <h2>Followers ${data.followers}</h2>
+         <h2>Followers 6</h2>
          </div>
          </div>
          <div class="col">
@@ -205,7 +177,7 @@ function generateHTML(data) {
          <h2>Github stars coming soon</h2>
          </div>
          <div class="card">
-         <h2>Following ${data.following}</h2>
+         <h2>Following 4</h2>
          </div>
          </div>
          </div>
@@ -213,7 +185,4 @@ function generateHTML(data) {
          </main>
          </div>
          </body>
-         </html>`
-        }
-
-module.exports = generateHTML;
+         </html>
